# mente-ggz

./: .gitignore  README.md
backend/: Cargo.toml  configuration.yaml
backend/src/: configuration.rs  main.rs  startup.rs
client/: package-lock.json  package.json
client/src/: root.tsx
client/src/routes/: index.tsx  layout.tsx
